Refactor AbstractContainerMatcher to allow using Predicates as well as Patterns